--- a/server/views/common/_form.pug
+++ b/server/views/common/_form.pug
@@ -6,7 +6,7 @@ section.form
     h2.form__title.title Пишите, пообщаемся
     form(action="/" method="POST").form-email
       .form-email__line
-        label.form-email__label(for="") Имя ваше*
+        label.form-email__label(for="") Имя *
         input.form-email__input(type="text" name="name")
       .form-email__line
         label.form-email__label(for="") Email *
